# snow2ogr_tui

./: .gitignore  README.md  pyproject.toml  snow2ogr.db
models/: ExportDurationRidge_20260716_130132_594833.joblib  ExportDurationRidge_20260717_110732_416430.joblib  ExportDurationRidge_20260717_131429_299250.joblib  ExportDurationRidge_d9ee7599-aced-434b-a8df-975ccf79517b.joblib  ExportDurationRidge_ff09ef4f-fb56-4d5f-b362-309b130da5a7.joblib
src/snow2ogr_tui/: __init__.py  login_error.txt  main.py
src/snow2ogr_tui/common/: __init__.py  models.py
src/snow2ogr_tui/database/: __init__.py  ml.py  models.py  queries.py  setup.py
src/snow2ogr_tui/pipelines/: __init__.py  download_worker.py  downloader.py  export_manager.py  group_tables.py  list_tables.py  query_performance.py
src/snow2ogr_tui/widgets/: __init__.py  data_table.py  downloader_screen.py  downloads_tab.py  export_manager.py  header.py  help_screen.py  ml_manager.py  ml_settings.py  old_data_table.py  sf_login.py  table_manager.py  table_tab.py
